No more crash on login and better session ending

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="button_latestTransactions">Ver Ultimas Transacciones</string>
     <string name="currentBalance">Saldo Actual</string>
     <string name="_exampleBalance">$32650</string>
+    <string name="cardStatus">"Tarjeta %1$s"</string>
+    <string name="balanceFormat">$%1$d</string>
 </resources>
