--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,23 +2,23 @@
     <string name="app_name">SodexoCheck</string>
     <string name="title_activity_datos_de_sesion">Iniciar Sesión</string>
 
-    <!-- Strings related to login -->
     <string name="prompt_rut">Rut</string>
     <string name="prompt_password">Pin</string>
     <string name="action_sign_in">Iniciar sesión</string>
     <string name="action_sign_in_short">Entrar</string>
-    <string name="error_invalid_rut">El rut no es valido :\'(</string>
-    <string name="error_invalid_password">El pin no es valido</string>
-    <string name="error_incorrect_password">Pin incorrecto</string>
-    <string name="error_field_required">Este campo es requerido</string>
-    <string name="error_unknown">Error desconocido</string>
-    <string name="logo_description">Application Logo</string>
+    <string name="logo_description">Logo de la aplicacion</string>
     <string name="cb_rememberMe">Recuerdame</string>
-    <string name="exampleName">Jhonny Melavo Láspatas</string>
     <string name="logMe">Mantenerme Conectado</string>
-    <string name="button_latestTransactions">Ver Ultimas Transacciones</string>
+
+    <string name="exampleName">Jhonny Melavo Láspatas</string>
+    <string name="default_college">U.T.F. SANTA MARIA</string>
+    <string name="cardStatus">"Tarjeta %1$s"</string>
+
     <string name="currentBalance">Saldo Actual</string>
     <string name="_exampleBalance">$32650</string>
-    <string name="cardStatus">"Tarjeta %1$s"</string>
     <string name="balanceFormat">$%1$d</string>
+    <string name="button_latestTransactions">Ver Ultimas Transacciones</string>
+    <string name="about_page">Acerca de…</string>
+    <string name="about_page_text">Hecho 98% a base de dulces y cafeína ;)\n Creada por: Oliver Hattshire\n \n No me hago responsable del mal uso de esta aplicación.\n La seguridad aplicada por Sodexo es bastante mala, por lo que si tu teléfono es seguro, tu cuenta lo estará aun más.</string>
+    <string name="example_cardStatus">Tarjeta Activa</string>
 </resources>
