Ads, fixed error in transactions and refresh

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SodexoCheck</string>
+    <string name="app_name">JunaCoffee</string>
     <string name="title_activity_datos_de_sesion">Iniciar Sesión</string>
 
     <string name="prompt_rut">Rut</string>
